# reaclib-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: convert_to_json.rs  hash_map.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: all.rs  deserialize.rs  serialize.rs
src/: error.rs  lib.rs
src/tests/: v1.rs  v2.rs
src/tests/v1/: multi  multi_chapter  non_utf8  parse_float_error_1  parse_float_error_2  parse_int_error  str_index_1  str_index_2  too_few_lines  unfinished_line_1  unfinished_line_2  unfinished_line_3  unfinished_line_4  unfinished_line_5  unfinished_line_6  unknown_chapter  unknown_resonance
src/tests/v2/: multi  non_utf8  parse_float_error_1  parse_float_error_2  parse_int_error_1  parse_int_error_2  str_index_1  str_index_2  too_few_lines_1  too_few_lines_2  unfinished_line_2  unfinished_line_3  unfinished_line_4  unknown_chapter  unknown_resonance
